5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4357/executions/1875_196.log
== TEST (2019-07-02 19:12:51) 
-- CODE:
from numpy import*
from numpy.linalg import*
matriz=array(eval(input("digite o numero:")))
a=matriz.shape[1]
b=matriz.shape[0]
for i in range(b):
	if(b==5):
		print("BOMBA")
else:
	print("LIVRE")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 19:13:28) 
-- CODE:
from numpy import*
from numpy.linalg import*
matriz=array(eval(input("digite o numero:")))
a=matriz.shape[1]
b=matriz.shape[0]
for i in range(b):
	if(b==5):
		print("BOMBA")
else:
	print("LIVRE")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 19:13:57) 
-- CODE:
from numpy import*
from numpy.linalg import*
matriz=array(eval(input("digite o numero:")))
a=matriz.shape[1]
b=matriz.shape[0]
for i in range(b):
	if(b==5):
		print("BOMBA")
else:
	print("LIVRE")
	
-- EXECUTION TIME:
1.14505
-- TEST CASE 1:
---- input:
[['B','L','L'],['L','L','L'],['L','B','B']]
2
1
---- correct output:
BOMBA
---- user output:
LIVRE
-- TEST CASE 2:
---- input:
[['B','L','L'],['L','L','L'],['L','B','B'],['L','B','L']]
3
2
---- correct output:
LIVRE
---- user output:
LIVRE
-- TEST CASE 3:
---- input:
[['B','L','L'],['B','B','B'],['L','B','B'],['L','B','L']]
2
2
---- correct output:
BOMBA
---- user output:
LIVRE
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 19:14:04) 
-- CODE:
from numpy import*
from numpy.linalg import*
matriz=array(eval(input("digite o numero:")))
a=matriz.shape[1]
b=matriz.shape[0]
for i in range(b):
	if(b==5):
		print("BOMBA")
else:
	print("LIVRE")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 19:14:37) 
-- CODE:
from numpy import*
from numpy.linalg import*
matriz=array(eval(input("digite o numero:")))
a=matriz.shape[1]
b=matriz.shape[0]
for i in range(b):
	if(I<b==5):
		print("BOMBA")
else:
	print("LIVRE")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 19:14:54) 
-- CODE:
from numpy import*
from numpy.linalg import*
matriz=array(eval(input("digite o numero:")))
a=matriz.shape[1]
b=matriz.shape[0]
for i in range(b):
	if(i<b==5):
		print("BOMBA")
else:
	print("LIVRE")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 19:19:29) 
-- CODE:
from numpy import*
from numpy.linalg import*
matriz=array(eval(input("digite o numero:")))
a=matriz.shape[1]
b=matriz.shape[0]
if(matriz[a,b]=="L"):
		print("LIVRE")
elif(matriz[a,b]=="B"):
	print("BOMBA")

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 19:20:06) 
-- CODE:
from numpy import*
from numpy.linalg import*
matriz=array(eval(input("digite o numero:")))
a=matriz.shape[0]
b=matriz.shape[1]
if(matriz[a,b]=="L"):
		print("LIVRE")
elif(matriz[a,b]=="B"):
	print("BOMBA")

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 19:20:36) 
-- CODE:
from numpy import*
from numpy.linalg import*
matriz=array(eval(input("digite o numero:")))
a=matriz.shape[2]
b=matriz.shape[1]
if(matriz[a,b]=="L"):
		print("LIVRE")
elif(matriz[a,b]=="B"):
	print("BOMBA")

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 19:21:43) 
-- CODE:
from numpy import*
from numpy.linalg import*
matriz=array(eval(input("digite o numero:")))
a=matriz.shape[1]
b=matriz.shape[2]
if(matriz[a,b]=="L"):
		print("LIVRE")
elif(matriz[a,b]=="B"):
	print("BOMBA")

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 19:22:15) 
-- CODE:
from numpy import*
from numpy.linalg import*
matriz=array(eval(input("digite o numero:")))
a=matriz.shape[1]
b=matriz.shape[2]
if(matriz[a,b]=="L"):
	print("LIVRE")
elif(matriz[a,b]=="B"):
	print("BOMBA")

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 19:22:59) 
-- CODE:
from numpy import*
from numpy.linalg import*
matriz=array(eval(input("digite o numero:")))
a=matriz.shape[0]
b=matriz.shape[1]
if(matriz[a,b]=="L"):
	print("LIVRE")
elif(matriz[a,b]=="B"):
	print("BOMBA")

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 19:25:41) 
-- CODE:
from numpy import*
from numpy.linalg import*
matriz=array(eval(input("digite o numero:")))
l=int(input("digite o numero:"))
c=int(input("digite o numero:")
a=matriz.shape[0]
b=matriz.shape[1]
if(matriz[a,b]=="L"):
	print("LIVRE")
elif(matriz[a,b]=="B"):
	print("BOMBA")

	
-- ERROR:
File "XXXX", line 6
    a=matriz.shape[0]
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 19:26:07) 
-- CODE:
from numpy import*
from numpy.linalg import*
matriz=array(eval(input("digite o numero:")))
l=int(input("digite o numero:"))
c=int(input("digite o numero:")
a=matriz.shape[0]
b=matriz.shape[1]
if(matriz[a,b]=="L"):
	print("LIVRE")
elif(matriz[a,b]=="B"):
	print("BOMBA")

	
-- ERROR:
File "XXXX", line 6
    a=matriz.shape[0]
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 19:26:18) 
-- CODE:
from numpy import*
from numpy.linalg import*
matriz=array(eval(input("digite o numero:")))
l=int(input("digite o numero:"))
c=int(input("digite o numero:")
if(matriz[a,b]=="L"):
	print("LIVRE")
elif(matriz[a,b]=="B"):
	print("BOMBA")

	
-- ERROR:
File "XXXX", line 6
    if(matriz[a,b]=="L"):
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 19:27:06) 
-- CODE:
from numpy import*
from numpy.linalg import*
matriz=array(eval(input("digite o numero:")))
l=int(input("digite o numero:"))
c=int(input("digite o numero:"))
a=matriz.shape[l]
b=matriz.shape[c]
if(matriz[a,b]=="L"):
	print("LIVRE")
elif(matriz[a,b]=="B"):
	print("BOMBA")

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 19:27:32) 
-- CODE:
from numpy import*
from numpy.linalg import*
matriz=array(eval(input("digite o numero:")))
l=int(input("digite o numero:"))
c=int(input("digite o numero:"))
a=matriz.shape[0]
b=matriz.shape[1]
if(matriz[a,b]=="L"):
	print("LIVRE")
elif(matriz[a,b]=="B"):
	print("BOMBA")

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 19:29:22) 
-- CODE:
from numpy import*
from numpy.linalg import*
matriz=array(eval(input("digite o numero:")))
linha=int(input("digite o numero:"))
coluna=int(input("digite o numero:"))
a=matriz.shape[0]
b=matriz.shape[1]
if(matriz[a,b]==linha,coluna):
	print("LIVRE")
else:
	print("BOMBA")

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 19:30:52) 
-- CODE:
from numpy import*
from numpy.linalg import*
matriz=array(eval(input("digite o numero:")))
linha=int(input("digite o numero:"))
coluna=int(input("digite o numero:"))
a=matriz.shape[0]
b=matriz.shape[1]
if(matriz[a,b]==[linha,coluna]):
	print("LIVRE")
else:
	print("BOMBA")

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 19:31:41) 
-- CODE:
from numpy import*
from numpy.linalg import*
matriz=array(eval(input("digite o numero:")))
linha=int(input("digite o numero:"))
coluna=int(input("digite o numero:"))
a=matriz.shape[0]
b=matriz.shape[1]
if(matriz[a,b]=='L'):
	print("LIVRE")
else:
	print("BOMBA")

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 19:33:27) 
-- CODE:
from numpy import*
from numpy.linalg import*
matriz=array(eval(input("digite o numero:")))
linha=int(input("digite o numero:"))
coluna=int(input("digite o numero:"))
a=matriz.shape[0]
b=matriz.shape[1]
if(matriz[linha,coluna]=='L'):
	print("LIVRE")
else:
	print("BOMBA")

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 19:33:41) 
-- CODE:
from numpy import*
from numpy.linalg import*
matriz=array(eval(input("digite o numero:")))
linha=int(input("digite o numero:"))
coluna=int(input("digite o numero:"))
a=matriz.shape[0]
b=matriz.shape[1]
if(matriz[linha,coluna]=='L'):
	print("LIVRE")
else:
	print("BOMBA")

	
-- EXECUTION TIME:
1.24347
-- TEST CASE 1:
---- input:
[['B','L','L'],['L','L','L'],['L','B','B']]
2
1
---- correct output:
BOMBA
---- user output:
BOMBA
-- TEST CASE 2:
---- input:
[['B','L','L'],['L','L','L'],['L','B','B'],['L','B','L']]
3
2
---- correct output:
LIVRE
---- user output:
LIVRE
-- TEST CASE 3:
---- input:
[['B','L','L'],['B','B','B'],['L','B','B'],['L','B','L']]
2
2
---- correct output:
BOMBA
---- user output:
BOMBA
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
